# Parallax

./: .gitignore  README.md  config.py  pyproject.toml
.claude/agents/: accountability-safeguards.md  agent-runtime-tooling.md  architecture-docs.md  intent-correctness.md  parallax.md  reliability-operations.md  sanyi-review.md  security-privacy-data.md
.claude/skills/accountability-safeguards/: SKILL.md
.claude/skills/agent-runtime-tooling/: SKILL.md
.claude/skills/architecture-docs/: SKILL.md
.claude/skills/intent-correctness/: SKILL.md
.claude/skills/parallax-shared/: SKILL.md
.claude/skills/parallax-shared/references/: communication-and-handoff.md  definition-of-done.md  evidence-model.md  interview-mode.md  (+1 more)
.claude/skills/reliability-operations/: SKILL.md
.claude/skills/sanyi/: SKILL.md
.claude/skills/security-privacy-data/: SKILL.md
docs/documents/: Evidence_Driven_PR_Review_System_Spec.md  Parallax_Project_Name.md  Parallax_Subagent_Architecture.md
docs/superpowers/plans/: 2026-07-19-parallax-skills-implementation.md
parallax/: cli.py
parallax/orchestration/: deduplication.py  diff_scope.py  prioritization.py  profile_detection.py  report_builder.py
parallax/schemas/: __init__.py  export_schemas.py  models.py  review_finding.schema.json  review_report.schema.json
tests/: conftest.py  test_cli.py  test_deduplication.py  test_diff_scope.py  test_models.py  test_prioritization.py  test_profile_detection.py  test_report_builder.py  test_sanyi_mapping.py
tests/fixtures/: review_report_golden.txt  sample_report.py  sanyi_report_sample.md
(+7 files in other folders)
